# transcriptRead

./: index.html  output.txt  pyproject.toml  readme.md
scripted/: __main__.py
scripted.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
