[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scripted"
version = "1.0.0"
dependencies = [
    "bs4",
    "pathlib"
]
requires-python = ">=3.10"

[project.scripts]
scripted = "scripted.__main__:main"

[tool.setuptools]
packages = ["scripted"]

# List of decorators that change the signature of a decorated function.
# We need this because Click decorators mutate the main() function.
#signature-mutators = ["command", "option", "argument"]
